<resources>
    <string name="app_name">BordAndSimpsonMethods</string>
    <string name="title_activity_management_experts">ManagementExpertsActivity</string>
    <string name="add_expert">Add expert</string>
    <string name="edit_expert">Edit expert</string>
    <string name="id">ID: </string>
    <string name="ratings">Ratings: </string>
    <string name="importance">Importance: </string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="edit_experts">Edit experts</string>
    <string name="board">Board</string>
    <string name="simpson">Simpson</string>

</resources>
