<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewAddExpertsID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratings" />

        <EditText
            android:id="@+id/editTextExpertsRatings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A, B, C, D" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance" />

        <EditText
            android:id="@+id/editTextExpertsImportance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="43" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

</LinearLayout>