<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutExpertManagementStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.AddExpertFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <EditText
            android:id="@+id/editTextAddExpertsID"
            style="@style/editTextFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="R"
            android:id="@+id/buttonRefresh"
            style="@style/buttonFragment"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratings" />

        <EditText
            android:id="@+id/editTextExpertsRatings"
            style="@style/editTextFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A, B, C, D" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance" />

        <EditText
            android:id="@+id/editTextExpertsImportance"
            style="@style/editTextFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="43" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddExpert"
        style="@style/buttonFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add" />

</LinearLayout>
