<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewExpertsID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: " />

        <Spinner
            android:id="@+id/spinnerExpertsIDs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratings" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A, B, C, D" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEditExpertSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonEditExpertDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>